Few files "sing in"

--- a/rsds/app/views/users/_form.html.erb
+++ b/rsds/app/views/users/_form.html.erb
@@ -22,8 +22,8 @@
   </div>
 
   <div>
-    <%= form.label :userPassword, style: "display: block" %>
-    <%= form.text_field :userPassword %>
+    <%= form.label :password_digest, style: "display: block" %>
+    <%= form.text_field :password_digest %>
   </div>
 
   <div>
