Also some fixed errors

--- a/rsds/app/views/users/_user.html.erb
+++ b/rsds/app/views/users/_user.html.erb
@@ -10,8 +10,8 @@
   </p>
 
   <p>
-    <strong>Userpassword:</strong>
-    <%= user.userPassword %>
+    <strong>password_digest:</strong>
+    <%= user.password_digest %>
   </p>
 
   <p>
