Fixed error in transaction

--- a/rsds/app/views/transactions/_form.html.erb
+++ b/rsds/app/views/transactions/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div>
-    <%= form.label :transaction, style: "display: block" %>
-    <%= form.datetime_field :transaction %>
+    <%= form.label :transactionDate, style: "display: block" %>
+    <%= form.datetime_field :transactionDate %>
   </div>
 
   <div>
