--- a/rsds/app/views/transactions/_transaction.html.erb
+++ b/rsds/app/views/transactions/_transaction.html.erb
@@ -1,7 +1,7 @@
 <div id="<%= dom_id transaction %>">
   <p>
-    <strong>Transaction:</strong>
-    <%= transaction.transaction %>
+    <strong>transactionDate:</strong>
+    <%= transaction.transactionDate %>
   </p>
 
   <p>
